# system_uri

./: .gitignore  Cargo.toml  build.rs
src/: ffi.rs  lib.rs
system_uri_jni/: Cargo.toml
system_uri_jni/src/: lib.rs
