[package]
name = "system_uri_jni"
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "System URI JNI wrapper"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
repository = "https://github.com/maidsafe/system_uri"
version = "0.1.0"

[dependencies]
ffi_utils = "~0.4.0"
jni = "~0.10.1"
unwrap = "~1.1.0"

[dependencies.system_uri]
path = ".."
version = "~0.4.0"
features = ["bindings"]

[lib]
crate_type = ["cdylib"]
